# Contract-Whist-AI

./: .coveragerc  .gitignore  game.py  pyproject.toml  readme.md
dokumentaatio/: maarittelydokumentti.md  viikkoraportti1.md  viikkoraportti2.md
src/: consoleIO.py  game.py  gameManager.py  gameSchema.md  main.py
src/tests/: game_test.py
