[tool.poetry]
name = "contract-whist-ai"
version = "0.1.0"
description = ""
authors = ["oskari83 <oskpelto@gmail.com>"]
readme = "README.md"
packages = [{include = "contract_whist_ai"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
coverage = "^7.2.7"
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
